myteo/test/analyze/type_check/type_parameters/parameterized_type_params_error.myte
module test

fun test<T>(x: T<Int>) {}

fun main() {}